--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore --runtime windows
+      run: dotnet publish -c Release --output ./Release
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
@@ -32,7 +32,7 @@ jobs:
         path: ${{ github.workspace }}
     #Upload Release
     - name: Make zip
-      run: zip -r build.tar.gz ./MinecraftThroughTime/bin/Debug/*
+      run: zip -r build.tar.gz ./Release/*
       shell: bash
     - name: Create Release
       uses: softprops/action-gh-release@v2
