--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,8 @@ jobs:
   build:
 
     runs-on: self-hosted
+    permissions:
+      contents: write
     env:
       DOTNET_INSTALL_DIR: "/home/localadmin/actions-runner/dotnet"
     steps:
@@ -24,7 +26,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet publish -c Release --output ./Release
+      run: dotnet publish -c Release --output ./Release --runtime win-x86  --self-contained true -p:PublishTrimmed=true -p:PublishSingleFile=true
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
