--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Create Release
       uses: softprops/action-gh-release@v2
       with:
-          files: build.tar.gz
+          files: MinecraftThroughTime.zip
           draft: false
           prerelease: true
           tag_name: auto-release
