--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet publish -c Release --output ./Release --runtime win-x86  --self-contained true -p:PublishTrimmed=true -p:PublishSingleFile=true
+      run: dotnet publish -c Release --output ./Release --runtime win-x86 --self-contained true -p:PublishSingleFile=true
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
@@ -36,10 +36,15 @@ jobs:
     - name: Make zip
       run: zip -r MinecraftThroughTime.zip ./Release/*
       shell: bash
+    - name: Make abbr exe
+      run: cp ./Release/MinecraftThroughTime.exe ./Release/MTT.exe
+      shell: bash
     - name: Create Release
       uses: softprops/action-gh-release@v2
       with:
-          files: MinecraftThroughTime.zip
+          files: |
+           MinecraftThroughTime.zip 
+           ./Release/MTT.exe
           draft: false
           prerelease: true
           tag_name: auto-release
