Added Interactive Console Mode Added Full Bakeing of a file into the .exe, the complete profile can now be baked into the exe for distribution instead of just a path or url Fix for chrash if serverupdate for an version cant find a url for the jar. added error message Some cleanup Now 2 versions, fully contained larger one and small but Framework installation dependent

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,8 +25,13 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
+    - name: Build Self Contained
       run: dotnet publish -c Release --output ./Release --runtime win-x86 --self-contained true -p:PublishSingleFile=true
+    - name: Make abbr exe for Self Contained
+      run: cp ./Release/MinecraftThroughTime.exe ./Release/MTT_SC.exe
+      shell: bash
+    - name: Build Normal
+      run: dotnet publish -c Release --output ./Release --runtime win-x86 -p:PublishSingleFile=true
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
@@ -45,6 +50,7 @@ jobs:
           files: |
            MinecraftThroughTime.zip 
            ./Release/MTT.exe
+           ./Release/MTT_SC.exe
           draft: false
           prerelease: true
           tag_name: auto-release
