--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: self-hosted
     permissions:
       contents: write
-    env:
-      DOTNET_INSTALL_DIR: "/home/localadmin/actions-runner/dotnet"
     steps:
     - uses: actions/checkout@v4
+    - name: Setup .NET install directory
+      run: echo "DOTNET_INSTALL_DIR=$HOME/.dotnet" >> $GITHUB_ENV
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
